2012-01-07  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed a segmentation fault in the DTS
	detection code. Fix for bug 698.

2012-01-05  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: The track IDs used in the "timecodes_v2"
	extraction mode are consistent again with the IDs that mkvmerge's
	identification reports and that mkvextract's "tracks" extraction
	mode uses. Fix for bugs 689 and 694.

2012-01-04  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Added video pixel dimensions to the
	output of "--identify-verbose" for Matroska files.

2012-01-02  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.2.1.

2011-12-29  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed certain DTS files being mis-detected as
	AC3. Fix for bug 693.

2011-12-28  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Added an option "--without-gettext" that allows
	for building without support for translations even if gettext
	itself is installed.

	* build system: Added an option "--without-curl" that allows for
	building without CURL support even if CURL itself is installed.

	* all: bug fix: Fixed compilation if gettext/libintl is not
	available.

	* mkvmerge: bug fix: The MPEG program stream reader was reporting
	wrong progress percentage if multiple files were used since
	v5.1.0.

2011-12-27  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Removed the posix_fadvise() code. The
	application is using its own caching code which caused bad
	performance if the OS caching provided via posix_fadvise() is used
	as well.

2011-12-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: If an MP4 file contains chapters encoded in a
	different charset than UTF-8 and --chapter-charset is not used
	then the error message shown is a lot clearer why mkvmerge aborts
	muxing. Before the error message was a generic
	"mm_text_io_c::read_next_char(): invalid UTF-8 character. The
	first byte:..."
